--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <div class="top">
       <h1 class="aswin">Aswin</h1>
       <h2><p class="a">a web developer</p></h2>
-      <img class="cloud" src="/first project/img/grey.png" />
+      <img class="cloud" src="img/grey.png" />
       <img
         class="mount2"
         src="https://emojipedia-us.s3.amazonaws.com/source/skype/289/mountain_26f0-fe0f.png"
       />
-      <img class="cloud2" src="/first project/img/grey.png" />
+      <img class="cloud2" src="img/grey.png" />
 
       <img
         class="mount"
@@ -51,8 +51,8 @@
         src="https://emojipedia-us.s3.amazonaws.com/source/skype/289/mountain_26f0-fe0f.png"
       />
 
-      <img class="bird" src="/first project/img/bird.png" />
-      <img class="bird2" src="/first project/img/bird.png" />
+      <img class="bird" src="img/bird.png" />
+      <img class="bird2" src="img/bird.png" />
     </div>
     <div class="mid">
       <img
