--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="Skill-row">
           <img
             class="web"
-            src="https://img-premium.flaticon.com/png/128/2002/premium/2002826.png?token=exp=1630514433~hmac=7a451043ddf859c4febc00b354d51231"
+            src="img/web.png"
           />
           <h2 class="web1">web;</h2>
           <p class="p2">
@@ -80,7 +80,7 @@
         <div class="Skill-row">
           <img
             class="game"
-            src="https://img-premium.flaticon.com/png/128/1722/premium/1722368.png?token=exp=1630518019~hmac=b1a0387a28d5f56bb520351d9df6bd39"
+            src="img/game.png"
           />
           <h2 class="gamer">Gamer;</h2>
           <p class="p3">
