--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>aswin</title>
-    <link rel="stylesheet" href="css/4.css" />
+    <link rel="stylesheet" href="/first project/css/4.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,12 +23,12 @@
     <div class="top">
       <h1 class="aswin">Aswin</h1>
       <h2><p class="a">a web developer</p></h2>
-      <img class="cloud" src="img/grey.png" />
+      <img class="cloud" src="/first project/img/grey.png" />
       <img
         class="mount2"
         src="https://emojipedia-us.s3.amazonaws.com/source/skype/289/mountain_26f0-fe0f.png"
       />
-      <img class="cloud2" src="img/grey.png" />
+      <img class="cloud2" src="/first project/img/grey.png" />
 
       <img
         class="mount"
@@ -51,8 +51,8 @@
         src="https://emojipedia-us.s3.amazonaws.com/source/skype/289/mountain_26f0-fe0f.png"
       />
 
-      <img class="bird" src="img/bird.png" />
-      <img class="bird2" src="img/bird.png" />
+      <img class="bird" src="/first project/img/bird.png" />
+      <img class="bird2" src="/first project/img/bird.png" />
     </div>
     <div class="mid">
       <img
@@ -67,7 +67,7 @@
         <div class="Skill-row">
           <img
             class="web"
-            src="img/web.png"
+            src="/first project/img/web.png"
           />
           <h2 class="web1">web;</h2>
           <p class="p2">
@@ -80,7 +80,7 @@
         <div class="Skill-row">
           <img
             class="game"
-            src="img/game.png"
+            src="/first project/img/game.png"
           />
           <h2 class="gamer">Gamer;</h2>
           <p class="p3">
@@ -96,7 +96,7 @@
         <h2 class="mes">Get In Touch</h2>
         <p class="p4">Interested pople contact me,</p>
         
-        <a class="btn" href="mailto:aswinthkaruppiah">CONTACT ME</a>
+        <a class="btn" href="/first project/contactme.html">CONTACT ME</a>
       </div>
 
     <div class="bot">
