--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <h2 class="mes">Get In Touch</h2>
         <p class="p4">Interested pople contact me,</p>
         
-        <a class="btn" href="/first project/contactme.html">CONTACT ME</a>
+        <a class="btn" href="contactme.html">CONTACT ME</a>
       </div>
 
     <div class="bot">
