--- a/contactme.html
+++ b/contactme.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>contact me</title>
-    <link rel="stylesheet" href="/first project/css/6.css" />
+    <link rel="stylesheet" href="6.css" />
   </head>
   <body>
     <div class="form">
